# AISpeechApp

./: .gitignore  AGENTS.md  MODEL_SCAN.md  README.md  launch.bat  launch_demo.bat  pyproject.toml  run_desktop_probe.bat
aispeechapp/: __init__.py  audio_gap_analysis.py  bnb_gui_probe.py  cache_paths.py  candidates.py  desktop_demo_probe.py  first_impression.py  gui.py  smoke.py  voxcpm2_streaming.py
configs/: candidates.json  first_impression_prompts.json
scripts/: bootstrap.ps1  synthesize_backend.py
tests/: test_audio_gap_analysis.py  test_candidates.py  test_desktop_demo_probe.py  test_gui.py  test_smoke.py  test_synthesize_backend.py  test_voxcpm2_streaming.py
voice_refs/: README.md
